# vk_gltf_viewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: configure_spirv.cmake  spirv_embed.cpp.in  spirv_manifest.hpp.in
include/graphics/: mtl_renderer.hpp  renderer.hpp  resource_table.hpp  vk_renderer.hpp
include/graphics/imgui/: mtl_renderer.hpp  vk_renderer.hpp
include/imgui/: config.hpp  renderer.hpp  user.hpp
include/nvidia/: aftermath.hpp  dlss.hpp
include/vk_gltf_viewer/: application.hpp  assets.hpp  buffer.hpp  buffer_uploader.hpp  camera.hpp  deletion_queue.hpp  device.hpp  fence_pool.hpp  image.hpp  imgui_renderer.hpp  resource_table.hpp  scheduler.hpp  swapchain.hpp  util.hpp  viewer.hpp
include/vk_gltf_viewer/nvidia/: aftermath.hpp
include/vulkan/: cache.hpp  command_pool.hpp  debug_utils.hpp  fence_pool.hpp  fmt.hpp  object_types.hpp  pipeline_builder.hpp  queue.hpp  sync_pools.hpp  vk.hpp  vk_fmt.hpp  vma.hpp
shaders/: aabb_visualizer.frag.glsl  aabb_visualizer.vert.glsl  common.h  common.h.glsl  culling.glsl.h  culling.h  culling.h.glsl  frustum_culling.glsl.h  hiz_reduce.comp.glsl  main.frag.glsl  main.mesh.glsl  main.task.glsl  mesh_common.glsl.h  mesh_common.h  mesh_common.h.glsl  resource_table.glsl.h  resource_table.h  resource_table.h.glsl  shadow_map.frag.glsl  shadow_map.mesh.glsl  shadow_map.task.glsl  srgb.glsl.h  srgb.h  srgb.h.glsl
shaders/ui/: ui.frag.glsl  ui.glsl.h  ui.h  ui.h.glsl  ui.metal  ui.vert.glsl
shaders/visbuffer/: visbuffer.frag.glsl  visbuffer.glsl.h  visbuffer.h  visbuffer.h.glsl  visbuffer.mesh.glsl  visbuffer.metal  visbuffer.task.glsl  visbuffer_resolve.comp.glsl  visbuffer_resolve.metal
src/: buffer_uploader.cpp  imgui_renderer.cpp  main.cpp  vma_implementation.cpp
src/graphics/: cocoa_window.mm  metal_cpp_implementation.cpp  mtl_renderer.cpp  renderer.cpp  resource_table.cpp  vk_renderer.cpp
src/graphics/imgui/: mtl_renderer.cpp  vk_renderer.cpp
src/imgui/: renderer.cpp
src/nvidia/: aftermath.cpp  dlss.cpp
src/vk_gltf_viewer/: application.cpp  assets.cpp  buffer.cpp  camera.cpp  deletion_queue.cpp  device.cpp  image.cpp  imgui_renderer.cpp  memory.cpp  resource_table.cpp  scheduler.cpp  swapchain.cpp  viewer.cpp  world.cpp  wuffs_implementation.cpp
src/vk_gltf_viewer/nvidia/: aftermath.cpp
src/vulkan/: pipeline_builder.cpp  vma_implementation.cpp
submodules/: CMakeLists.txt
